fix grid vertical mode and default alignment

--- a/scss/component/grid.scss
+++ b/scss/component/grid.scss
@@ -2,6 +2,8 @@
     display: flex;
     white-space: nowrap;
     flex-wrap: wrap;
+    align-items: center;
+    flex-direction: row;
     margin: -(get-gap("container") / 2);
 
     &.is-start-align {
@@ -18,12 +20,6 @@
 
     &.is-vertical {
         flex-direction: column;
-        align-items: stretch;
-    }
-
-    &:not(.is-vertical) {
-        flex-direction: row;
-        align-items: center;
     }
 
     &.is-stackable {
